# like-dbg

./: .dockerfile_android  .dockerfile_base  .dockerfile_base_arch  .dockerfile_compiler_mac  .dockerfile_dbg  .dockerfile_dbg_arch  .dockerfile_dbge  .dockerfile_kbuilder  .dockerfile_rootfs  .dockerignore  .flake8  .gitignore  .hadolint.yml  .hist  .tmux.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.ini  ctf.ini  pyproject.toml  requirements.txt  start_kgdb.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  codecov.yml  hadolint.yml  linter.yml  ruff.yml  shellcheck.yml
configs/: system.ini  user.ini
configs/kernel_configs/: README.md
ctf/: README.md  extract-vmlinux.sh
ctf/misc/: bin2charr.py  cpio.sh  exploit.c  extract-vmlinux.sh  find_in_kernel.py
examples/: README.md
examples/c_kmod/: README.md
examples/c_kmod/echo_service/: .built-in.a.cmd  .echoservice.o.cmd  .modules.order.cmd  INSTALL  Kconfig  Makefile  echoservice.c
examples/c_kmod/ioctl_test_drv/: Kconfig  Makefile  expl.c  ioctldemo.c
examples/kernel_confs/: README.md  tinyconf_x86_64
examples/like_dbg_confs/: README.md  echo_module.ini  echo_module_arm64.ini  ioctl_module_x86.ini
examples/like_dbg_confs/pawnyable/: LK01.ini  LK01_all_miti.ini
io/scripts/: .gdbinit  debugger.sh  gdb_script  like_debugger_tool_install.sh  rootfs.sh
kb/: README.md
src/: ctf_runner.py  debuggee.py  debugger.py  docker_runner.py  kernel_builder.py  kernel_unpacker.py  linux_kernel_dl.py  misc.py  rootfs_builder.py  tqdm_dlbar.py
src/tests/: test_debuggee.py  test_debugger.py  test_docker_runner.py  test_kernel_builder.py  test_kernel_downloader.py  test_kernel_unpacker.py  test_misc.py  test_rootfs_builder.py
src/tests/confs/: cfg_setter.ini  lkdl_commit.ini  lkdl_mmp.ini  lkdl_tag.ini  user.ini
src/tests/files/: .dockerfile_test
