[tool.poetry]
name = "like_dbg"
version = "0.1.0"
description = "Fully dockerized Linux kernel debugging environment"
authors = ["434b <admin@0x434b.dev>"]
license = "MIT"
readme = "README.md"
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
platformdirs = "^4.2.2"
fabric = "^3.2.2"
docker = "^7.1.0"
tqdm = "^4.66.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"


[tool.ruff]
# https://docs.astral.sh/ruff/settings
select = ["E", "F", "C4", "PTH", "TID", "PERF", "N", "C90"]
# Group violations by containing file.
output-format = "grouped"
line-length = 140
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Assume Python 3.10
target-version = "py310"
fix = true
unfixable = [
  "ERA", # do not autoremove commented out code
]

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src"]
console_output_style = ["progress"]
